<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map">

    <TextView
        android:id="@+id/upcomingTitle"
        android:layout_height="28dp"
        android:layout_width="145dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:background="@drawable/title_format"
        android:layout_marginTop="20dp"
        android:text="Upcoming Bookings"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="#AF0500"
        android:gravity="top">
    </TextView>
    <ListView
        android:id="@+id/upcomingList"
        android:background="@drawable/window_format"
        app:layout_constraintLeft_toLeftOf="@id/upcomingTitle"
        app:layout_constraintTop_toBottomOf="@id/upcomingTitle"
        android:backgroundTint="@color/white"
        android:layout_marginTop="0dp"
        android:layout_height="88dp"
        android:layout_width="145dp"
        >
    </ListView>
    <!--    <ImageView-->
    <!--        android:background="@drawable/window_view"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:backgroundTint="@color/white"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_height="155dp"-->
    <!--        android:layout_width="372dp"-->
    <!--        android:id="@+id/upcomingBackground">-->
    <!--    </ImageView>-->
    <!--            android:layout_marginTop="20dp"-->
    <!--            android:text="Upcoming Appointments"-->
    <!--            android:layout_height="155dp"-->
    <!--            android:layout_width="372dp"-->


    <!--            android:layout_height="88dp"-->
    <!--            android:layout_width="145dp"-->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gymmap" />

    <ImageButton
        android:id="@+id/lyonBtn"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/star" />

    <ImageButton
        android:id="@+id/uyBtn"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/star" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8E7E7"
            app:menu="@menu/bottom_nav_menu" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/villageBtn"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:contentDescription="Village"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221"
        app:srcCompat="@drawable/star" />

</androidx.constraintlayout.widget.ConstraintLayout>