...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/person"
        android:title="Person"
        android:icon="@drawable/person_foreground"/>
    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/home_foreground"/>
<!--    <item-->
<!--        android:id="@+id/settings"-->
<!--        android:title="Settings"-->
<!--        android:icon="@drawable/ic_settings_foreground"/>-->
</menu>
