<resources>

    <string name="app_name">USCRecApp</string>
    <string name="title_activity_gym_slots">gymSlots</string>
    <string name="userphoto">userPhoto</string>
    <string name="student_name">Student Name</string>
    <string name="_12345678">12345678</string>
    <string name="cancel">Cancel</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="date_and_time">Date and Time</string>
    <string name="gym_name">Gym Name</string>
    <string name="previous_bookings">Previous Bookings</string>
    <string name="summary_page">summary page</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_activity_map">map</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="swim">swim</string>
    <string name="llabel">Lyons Center</string>
</resources>