...
    <ImageView
        android:id="@+id/gymPic"
        android:layout_width="413dp"
        android:layout_height="187dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lyon_gym" />

...
                android:layout_weight="1"
                android:gravity="center"
                android:text="Select Day:"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="175dp"
                android:layout_height="42dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
...
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8E7E7"
            app:menu="@menu/bottom_nav_menu" />
    </RelativeLayout>

...
